--- a/module 02/app/index.html
+++ b/module 02/app/index.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>02 - app</title>
+   <title>app</title>
 </head>
 
 <body>
