--- a/module 03/55/index.html
+++ b/module 03/55/index.html
@@ -10,9 +10,11 @@
 </head>
 
 <body>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
+    <div class="wrapper">
+        <div class="box"></div>
+        <div class="box this"></div>
+        <div class="box"></div>
+    </div>
 
     <script src="script.js"></script>
 </body>
