--- a/модуль 05/food/public/index.html
+++ b/модуль 05/food/public/index.html
@@ -279,6 +279,9 @@
       </div>
    </div>
 
+   <!-- libs -->
+   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
    <!-- js -->
    <script src="js/script.js"></script>
 
