--- a/модуль 05/food/public/index.html
+++ b/модуль 05/food/public/index.html
@@ -109,7 +109,11 @@
                Мы разработали специальное меню, где учтены все нюансы правильного питания, от баланса БЖУ до их приготовления и дробления рациона.
             </div>
          </div>
+
+         <!-- slider -->
          <div class="offer__slider">
+
+            <!-- slider-counter -->
             <div class="offer__slider-counter">
                <div class="offer__slider-prev">
                   <img src="icons/left.svg" alt="prev">
@@ -121,21 +125,25 @@
                   <img src="icons/right.svg" alt="next">
                </div>
             </div>
+
+            <!-- slider-wrapper -->
             <div class="offer__slider-wrapper">
                <div class="offer__slide">
                   <img src="img/slider/pepper.jpg" alt="pepper">
                </div>
-               <!-- <div class="offer__slide">
-                        <img src="img/slider/food-12.jpg" alt="food">
-                    </div>
-                    <div class="offer__slide">
-                        <img src="img/slider/olive-oil.jpg" alt="oil">
-                    </div>
-                    <div class="offer__slide">
-                        <img src="img/slider/paprika.jpg" alt="paprika">
-                    </div> -->
+               <div class="offer__slide">
+                  <img src="img/slider/food-12.jpg" alt="food">
+               </div>
+               <div class="offer__slide">
+                  <img src="img/slider/olive-oil.jpg" alt="oil">
+               </div>
+               <div class="offer__slide">
+                  <img src="img/slider/paprika.jpg" alt="paprika">
+               </div>
             </div>
+
          </div>
+
       </div>
    </div>
 
