--- a/модуль 05/food/public/index.html
+++ b/модуль 05/food/public/index.html
@@ -293,7 +293,7 @@
    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
    <!-- js -->
-   <script src="js/script.js"></script>
+   <script src="js/bundle.js"></script>
 
 </body>
 
